[gd_scene load_steps=6 format=2]

[ext_resource path="res://Sprites/hud/hud_action_reward_screen.png" type="Texture" id=1]
[ext_resource path="res://Entities/HUD/Action_Window.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Skills/mining_skill_icon.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Skills/woodcutting_skill_icon.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Skills/fishing_skill_icon.png" type="Texture" id=5]

[node name="Action_Window" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Action_Window_Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="Mining_Skill_Icon" type="Sprite" parent="."]
visible = false
texture = ExtResource( 3 )
centered = false

[node name="Woodcutting_Skill_Icon" type="Sprite" parent="."]
visible = false
texture = ExtResource( 4 )
centered = false

[node name="Fishing_Skill_Icon" type="Sprite" parent="."]
visible = false
texture = ExtResource( 5 )
centered = false
